--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,1 +1,3 @@
 v<0.1.0>, <4/9/2014> -- Initial Release
+v<0.1.1>, <4/20/2014> -- Second Release for In-class Presentation
+v<0.1.2>, <4/27/2014> -- Third Release
